name:                ice-cube
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hmac/ice-cube#readme
license:             BSD3
license-file:        LICENSE
author:              Harry Maclean
maintainer:          harryjmaclean@gmail.com
copyright:           2017 Harry Maclean
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , dates
                     , business
                     , time
  default-language:    Haskell2010

test-suite ice-cube-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ice-cube
                     , dates
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hmac/ice-cube
